@@ -1,6 +1,6 @@
 package it.gov.pagopa.payhub.activities.service.ingestionflow.receipt;
 
-import it.gov.pagopa.payhub.activities.exception.InvalidValueException;
+import it.gov.pagopa.payhub.activities.exception.common.InvalidValueException;
 import it.gov.pagopa.payhub.activities.service.files.XMLUnmarshallerService;
 import it.gov.pagopa.payhub.activities.xsd.receipt.pagopa.PaSendRTV2Request;
 import jakarta.xml.bind.JAXBContext;
@@ -50,7 +50,7 @@ class ReceiptUnmarshallerServiceTest {
     Assertions.assertEquals(2, response.getReceipt().getTransferList().getTransfers().size());
     Assertions.assertEquals("0201102IM", response.getReceipt().getTransferList().getTransfers().get(1).getTransferCategory());
     Assertions.assertEquals(1, response.getReceipt().getMetadata().getMapEntries().size());
-    Assertions.assertEquals("keytest3", response.getReceipt().getMetadata().getMapEntries().get(0).getKey());
+    Assertions.assertEquals("keytest3", response.getReceipt().getMetadata().getMapEntries().getFirst().getKey());
   }
 
   @Test
